# mqi

./: Cargo.toml  DESIGN.md  PROGRESS.md  README.md  progress.md  rustfmt.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: mqi.yml  pregen-command.yml
benches/: all.rs
examples/: README.md  forward.rs  open_put.rs  readme.rs  subscribe_managed.rs
examples/args/: mod.rs
src/: lib.rs  prelude.rs
src/admin/: bag.rs  bag_item.rs  execute.rs  inq.rs  iterator.rs  mod.rs  selectors.rs  values.rs
src/common/: macros.rs  mask.rs  mod.rs  mqmask.rs  mqstr.rs  mqvalue.rs  parameters.rs  result.rs
src/constants/: mapping.rs  mod.rs
src/constants/mapping/: mod.rs
src/constants/mapping/pregen/: x86_64-linux-mqconstants.rs  x86_64-windows-mqconstants.rs
src/core/: handles.rs  library.rs  masks.rs  mod.rs  mqi_verbs.rs  outcome.rs  values.rs
src/core/mqai/: filter.rs  handles.rs  mod.rs  values.rs  verbs.rs
src/mq/: attribute.rs  attribute_types.rs  buffer.rs  builder.rs  callback.rs  connect.rs  connect_options.rs  connection.rs  encoding.rs  get.rs  get_options.rs  headers.rs  inq_types.rs  link.rs  macros.rs  message.rs  mod.rs  mqmd.rs  mqstruct.rs  object.rs  open.rs  open_options.rs  parameters.rs  properties.rs  properties_options.rs  put.rs  put_options.rs  queue_manager.rs  stat.rs  strings.rs  subscribe.rs  subscribe_options.rs  syncpoint.rs  types.rs  verb.rs
src/mq/message/: inquire.rs  mod.rs  property.rs
src/mq/mqstruct/: mod.rs  struct_attach.rs  version.rs
src/mq/object/: attribute.rs  attribute_types.rs  definition.rs  get.rs  get_options.rs  inq.rs  inq_types.rs  mod.rs  open_options.rs  put.rs  put_options.rs  set.rs
tests/: admin.rs  cb.rs  connection.rs  dlopen2.rs  message.rs  mqi.rs  object.rs  queue_manager.rs  subscribe.rs
tests/_disabled/: cb.rs
tests/helpers/: mod.rs
