[package]
name = "mqi"
description = "Idiomatic IBM® MQ Interface (MQI) and MQ Administration Interface (MQAI) APIs"
repository = "https://github.com/advantic-au/mqi"
version = "0.1.0"
authors = ["Warren Spits <warren@advantic.au>"]
license = "Apache-2.0"
keywords = ["message-queue", "messaging"]
categories = ["asynchronous"]

rust-version = "1.81"
edition = "2021"
build = "build/mod.rs"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[features]
default = [
    "link",
    "constantgen",
    "runnable",
    "bindgen",
] # Default to generate code and compile time link
docsrs = ["libmqm-sys/docsrs", "pcf", "mqai", "link", "dlopen2"]
runnable = [ # Minimal features to make the code runnable
    "libmqm-sys/mqi_helpers",
]
constantgen = [ # Generate the constants (default is to use pregenerated constants)
    "runnable",
]
tracing = ["dep:tracing"] # Enable tracing in the MQI calls
pcf = ["libmqm-sys/pcf"] # Enable the PCF API
mqai = ["libmqm-sys/mqai"] # Enable the administrative API
link = ["libmqm-sys/link"] # Compile time linking
dlopen2 = ["libmqm-sys/dlopen2"] # Enable dlopen2 loading the MQI library
bindgen = ["libmqm-sys/bindgen"] # Generate the MQI bindings

[dependencies]
phf = { default-features = false, version = "0.11.2" }
page_size = "0.6.0"
libmqm-sys = { version = "0.4.0", default-features = false }
tracing = { version = "0.1.40", optional = true }
dlopen2 = "0.7.0"
regex-lite = "0.1.6"
derive_more = { version = "1.0.0", features = [
    "deref",
    "deref_mut",
    "as_ref",
    "from",
    "error",
    "display",
    "constructor",
    "add",
    "add_assign",
] }

[build-dependencies]
libmqm-sys = { version = "0.4.0", default-features = false }
phf = { default-features = false, version = "0.11" }
phf_codegen = "0.11.2"

## For development mode only
[patch.crates-io]
libmqm-sys = { git = 'https://github.com/advantic-au/libmqm-sys.git', branch = "develop" }

## Lints

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
allow_attributes = "warn"

# TODO - These should be removed and the underlying problem fixed
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[package.metadata.docs.rs]
features = ["docsrs"]
no-default-features = true

# development dependencies for examples
[dev-dependencies]
clap = { version = "4.5.16", features = ["derive"] }
anyhow = "1.0.87"
tracing = "0.1.40"
tracing-subscriber = "0.3"
ctrlc = "3.4"

[[example]]
name = "subscribe_managed"
required-features = ["link", "runnable"]

[[example]]
name = "readme"
required-features = ["link", "runnable"]

[[example]]
name = "open_put"
required-features = ["link", "runnable"]

[[example]]
name = "forward"
required-features = ["link", "runnable"]
